--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi==0.97.0
-joblib==1.3.0
-matplotlib-inline==0.1.6
-nltk==3.8.1
-numpy==1.25.0
-pandas==2.0.3
-pydantic==1.10.9
-scikit-learn==1.2.2
-SQLAlchemy==2.0.16
-uvicorn==0.22.0
+fastapi
+joblib
+matplotlib-inline
+nltk
+numpy
+pandas
+pydantic
+scikit-learn
+SQLAlchemy
+uvicorn
